<resources>
    <string name="app_name">Pockeitt</string>
    <string name="heading">Pockit</string>
    <string name="splash_screen">Premium Budget Manager</string>
    <string name="signup">Sign up to continue</string>
    <string name="login_continue">Login to continue</string>
    <string name="continue_google">Continue with Google</string>
    <string name="continue_apple">Continue with Apple</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="create_acc">Create Account</string>
    <string name="login">Login</string>
    <string name="already_acc">Already have an account?</string>
    <string name="budget_heading">Budget Currency</string>
    <string name="us_dollar_usd">US Dollar - USD</string>
    <string name="currency">Currency</string>
    <string name="_123_455">123,455</string>
    <string name="before_amount_12_345">Before Amount ($12,345)</string>
    <string name="currency_placement">Currency Placement</string>
    <string name="number_format">Number Format</string>
    <string name="security_heading">Set your security PIN</string>
    <string name="forgot_pin">Forgot PIN?</string>
    <string name="dollar">$22,400</string>
    <string name="_0_00">$0.00</string>
    <string name="write_notes_here">Write notes here</string>
    <string name="repeat_payments">Repeat\npayments</string>
    <string name="bills">Bills</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="swipe_up_to_add_or">Swipe up to Add or</string>
    <string name="add_bills_here"> ➕ Add Bills here</string>
    <string name="_123">$123</string>
    <string name="category">Category</string>
    <string name="date">Date</string>
    <string name="notes">Notes</string>
    <string name="expense_name">Expense Name</string>
    <string name="name">Expense Name</string>
    <string name="expense">💸 Expense</string>
    <string name="income">🤑 Income</string>
</resources>