<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomsheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#00000000"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <FrameLayout
        android:id="@+id/sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded"
        android:paddingBottom="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.76"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/line"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:background="@drawable/line"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="Swipe down to save"
                android:textColor="@color/font_grey"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:includeFontPadding="false"
                android:text="$ "
                android:textAlignment="center"
                android:textColor="@color/green"
                android:textColorHint="@color/green"
                android:textSize="42sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/amount_edit"
                app:layout_constraintTop_toTopOf="@+id/amount_edit" />


            <EditText
                android:id="@+id/amount_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@null"
                android:fontFamily="@font/poppins"
                android:hint="0"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@color/green"
                android:textColorHint="@color/green"
                android:textSize="42sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/expense_textfield"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:textSize="16sp"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxCornerRadiusTopStart="30dp"
                app:boxStrokeColor="@color/white"
                app:errorTextAppearance="@style/CustomTextInputLayoutHintStyle"
                app:layout_constraintBottom_toTopOf="@+id/textfield"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/amount_edit"
                app:layout_constraintWidth_percent="0.86"
                app:placeholderText="@string/expense_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_expense"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableEnd="@drawable/vector"
                    android:inputType="textMultiLine|textShortMessage"
                    android:padding="15dp" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textfield"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:hint="@string/category"
                android:textSize="16sp"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxCornerRadiusTopStart="30dp"
                app:boxStrokeColor="@color/white"
                app:errorTextAppearance="@style/CustomTextInputLayoutHintStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/expense_textfield"
                app:layout_constraintWidth_percent="0.86">

                <AutoCompleteTextView
                    android:id="@+id/spinner_cat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textfield2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:hint="@string/date"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxCornerRadiusTopStart="30dp"
                app:boxStrokeColor="@color/white"
                app:errorTextAppearance="@style/CustomTextInputLayoutHintStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textfield"
                app:layout_constraintWidth_percent="0.86"
                app:placeholderText="9 June 2024">

                <AutoCompleteTextView
                    android:id="@+id/spinner_date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textfield3"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:hint="@string/notes"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxCornerRadiusTopStart="30dp"
                app:boxStrokeColor="@color/white"
                app:errorTextAppearance="@style/CustomTextInputLayoutHintStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textfield2"
                app:layout_constraintWidth_percent="0.86"
                app:placeholderText="@string/write_notes_here">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_notes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:padding="19dp" />

            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textfield3"
                app:layout_constraintWidth_percent="0.86">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/mainlayout"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/repeat_circle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/repeat_circle"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="MissingConstraints" />

                    <ImageView
                        android:id="@+id/repeat_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/loop_left_line"
                        app:layout_constraintBottom_toBottomOf="@id/repeat_circle"
                        app:layout_constraintEnd_toEndOf="@id/repeat_circle"
                        app:layout_constraintStart_toStartOf="@id/repeat_circle"
                        app:layout_constraintTop_toTopOf="@id/repeat_circle" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:fontFamily="@font/poppins"
                        android:lineSpacingExtra="-2sp"
                        android:text="@string/repeat_payments"
                        android:textAlignment="textStart"
                        android:textColor="@color/blue"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toBottomOf="@+id/repeat_circle"
                        app:layout_constraintStart_toEndOf="@id/repeat_circle"
                        app:layout_constraintTop_toTopOf="@id/repeat_circle" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_weekly"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/weekly"
                    android:textColor="@android:color/black"
                    android:textSize="11sp"
                    app:backgroundTint="@color/white" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_monthly"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_marginStart="2dp"
                    android:text="@string/monthly"
                    android:textColor="@color/black"
                    android:textSize="11sp"
                    app:backgroundTint="@color/white"
                    app:strokeColor="@color/green" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
