<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".views.HomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/calender_btn"
            style="?android:spinnerStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/poppins"
            android:includeFontPadding="false"
            android:onClick="openDatePicker"
            android:paddingStart="2dp"
            android:text="Jan 2024"
            android:textColor="#696969"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.5" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-18dp"
            android:fontFamily="@font/poppins"
            android:includeFontPadding="false"
            android:text="@string/dollar"
            android:textAlignment="center"
            android:textColor="@color/green"
            android:textSize="42sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/calender_btn"
            app:layout_constraintTop_toBottomOf="@+id/calender_btn" />

        <ImageView
            android:id="@+id/arrow_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/arrow"
            app:layout_constraintStart_toEndOf="@id/textView"
            app:layout_constraintTop_toTopOf="@id/textView" />

        <ExpandableListView
            android:id="@+id/expandableListViewSample"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:childDivider="@color/white"
            android:divider="@android:color/white"
            android:dividerHeight="10dp"
            android:indicatorRight="?android:attr/expandableListPreferredItemIndicatorRight"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintWidth_percent="0.9" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="0dp"
            android:layout_height="62dp"
            android:layout_marginBottom="82dp"
            android:background="@drawable/rounded_background"
            android:backgroundTint="@color/white"
            android:elevation="3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.74"
            app:tabBackground="@drawable/tab_selected_background"
            app:tabGravity="fill"
            app:tabIndicatorHeight="0dp"
            app:tabMode="fixed"
            app:tabSelectedTextColor="#A1B9C5"
            app:tabTextAppearance="@style/CustomTabTextAppearance"
            app:tabTextColor="@color/blue">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabItem1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/expense" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabItem2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/income" />

        </com.google.android.material.tabs.TabLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include layout="@layout/bottomsheet" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>
